views/styles/header-footer.css
header {
  position         : relative;
  padding          : 12px;
  background-color : rgb(82,185,217);
}

header::after {
  content          : "";
  position         : absolute;
  height           : 8px;
  width            : 100%;
  bottom           : -8px;
  left             : 0;
  background-image : url("/static/banner-triangles.png");

}

#logo {
  color       : rgb(196,38,51);
  font-size   : 26pt;
  font-style  : italic;
  font-weight : bold;
}

#header-content-wrapper {
  display   : flex;
  max-width : 100px;
}

/* #header-content-wrapper */ #logo {
  flex       : 1;
  text-align : left;
}

/* -------------------------------------------------------------------------------- */

footer {
  padding    : 10px;
  text-align : right;
  color      : rgb(220,220,220);
  background : rgb(70,70,70);

}

footer a {
  color : rgb(155,155,155);
}

footer a:hover {
  color : rgb(255,255,255);
}

